--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
